--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_clients_mov?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_clients_mov?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -7,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-#spring.jpa.hibernate.hbm2ddl.auto=update
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
